...
                        when {
                            trailingIcon != null -> trailingIcon()
                            showClearButton && value.isNotEmpty() && !isFocused -> {
                                IconButton(onClick = { onValueChange("") }) {
                                    Icon(
                                        painter = painterResource(id = R.drawable.ic_close),
                                        contentDescription = "입력값 지우기",
                                        tint = SeniorOnColors.Gray400,
                                        modifier = Modifier.size(24.dp)
                                    )
                                }
                            }
                        }
...
