...
    Box(
        modifier = Modifier
            .fillMaxWidth()
            .height(82.dp),
    ) {
        Text(
            text = "5월 20일 (목)",
            modifier = Modifier.align(Alignment.TopStart),
            style = SeniorOnTextStyles.HeadingM,
            color = SeniorOnColors.Gray700,
            maxLines = 1,
        )

        Text(
            text = "오전 10:30",
            modifier = Modifier.align(Alignment.BottomStart),
            style = SeniorOnTextStyles.HeadingXXXL,
            color = SeniorOnColors.Gray800,
            maxLines = 1,
            overflow = TextOverflow.Clip,
        )
...
